[gd_scene load_steps=2 format=3 uid="uid://8yg27ye0pmo7"]

[ext_resource type="Script" path="res://Scripts/Button_Scripts_GUI/pause_menu_control_script.gd" id="1_qsh5t"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 11.0
offset_right = -1065.0
offset_bottom = -555.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.555, 2.555)
script = ExtResource("1_qsh5t")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 287.671
offset_top = 145.205
offset_right = 357.671
offset_bottom = 211.205

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Smoke Break?"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
